# nyro-db

./: Cargo.toml  README.md  nyrodb.toml.example
.github/workflows/: ci.yml  release.yml
docs/: overview.md
docs/getting_started/: configuration.md  installation.md
docs/internals/: architecture.md
src/: lib.rs  main.rs
src/api/: benchmark.rs  handlers.rs  mod.rs  realtime.rs  routes.rs
src/config/: defaults.rs  mod.rs
src/database/: batch.rs  helpers.rs  mod.rs  runtime.rs  tests.rs  types.rs  validation.rs
src/models/: mod.rs
src/storage/: benchmark.rs  encoding.rs  encoding_tests.rs  index.rs  mod.rs  rebuild.rs  typed.rs  writer.rs
src/utils/: benchmark.rs  logger.rs  metrics.rs  mod.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: CHANGELOG.md  api.json  nyrodb.toml  robots.txt  sitemap.xml
web/public/docs/: overview.md
web/public/docs/api/: realtime.md  rest.md
web/public/docs/getting_started/: installation.md
web/public/docs/internals/: architecture.md
web/src/: App.tsx  index.css
web/src/components/: Footer.tsx  Header.tsx  Sidebar.tsx  docsNav.ts
web/src/pages/: Changelog.tsx  Docs.tsx  Home.tsx
