[package]
name = "NyroDB"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
warp = "0.3"
anyhow = "1.0"
memmap2 = "0.9"
chrono = "0.4.42"
toml = "0.9.7"
dashmap = "6.1.0"
rkyv = { version = "0.7.45", features = ["validation"] }
tokio-tungstenite = "0.23.1"
futures-util = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"