[package]
name = "NyroDB"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
warp = "0.3"
anyhow = "1.0"
memmap2 = "0.9"
chrono = "0.4.42"
toml = "0.9.7"
dashmap = "6.1.0"
futures-util = "0.3.31"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
